# pymg

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: api.md  commands.md  index.md  pymg.md
docs/use/pugrade/: python-upgrade.md
examples/: usage_examples.md
scripts/: install.ps1  install.sh
src/pymg/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
src/pymg/alias/: __init__.py  alias_manager.py
src/pymg/benchmark/: __init__.py  benchmark_runner.py
src/pymg/benchmark/suites/: __init__.py  cpu_test.py  io_test.py  memory_test.py
src/pymg/cleanup/: __init__.py  cleanup_manager.py
src/pymg/config/: __init__.py  config_manager.py  settings.py
src/pymg/core/: __init__.py  executor.py  installer.py  uninstaller.py  version_lister.py  version_manager.py
src/pymg/doctor/: __init__.py  checker.py  diagnostics.py  network_checker.py  permission_checker.py
src/pymg/migrate/: __init__.py  migration_manager.py
src/pymg/utils/: __init__.py  archive.py  downloader.py  file_ops.py  logger.py  shell_integration.py  system_info.py
tests/: __init__.py  conftest.py  test_cli.py
tests/core/: test_installer.py  test_uninstaller.py  test_version_manager.py
tests/utils/: test_downloader.py  test_system_info.py
