[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymg"
version = "0.1.0"
description = "Python version manager (skeleton)"
readme = "README.md"
authors = [ { name = "pymg contributors" } ]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
